Dark mode fix and performance boost

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -249,7 +249,10 @@ header {
 .social-container {
   display: flex;
   gap: 1.75rem;
-  font-size: 2rem;
+}
+
+.social-icon {
+  height: 2rem;
 }
 
 /*Mnenja*/
@@ -309,11 +312,11 @@ header {
 }
 
 .contact-icon {
-  font-size: 4rem;
+  height: 4rem;
 }
 @media screen and (max-width: 48rem) {
   .contact-icon {
-    font-size: 2.5rem;
+    height: 2.5rem;
   }
 }
 
@@ -322,6 +325,10 @@ header {
   align-items: center;
   flex-direction: column;
   font-weight: 400;
+}
+
+.social-icon:hover {
+  --text: var(--hover);
 }
 
 html {
